--- a/HTML/details.html
+++ b/HTML/details.html
@@ -145,7 +145,7 @@
       <p>&copy; 2023</p>
     </footer>
     <script src="https://unpkg.com/ionicons@latest/dist/ionicons.js"></script>
-    <script src="../js/app.js"></script>
-    <script src="../js/add-favourites.js"></script>
+    <!-- <script src="../js/app.js"></script>
+    <script src="../js/add-favourites.js"></script> -->
   </body>
 </html>
