--- a/HTML/index.html
+++ b/HTML/index.html
@@ -3,6 +3,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Explore the web's wonders! Elevate your skills and build captivating online experiences. Visit us now!"
+    />
     <!-- CSS files -->
     <link rel="stylesheet" href="../CSS/all.css" />
     <link rel="stylesheet" href="../CSS/favourites.css" />
@@ -85,6 +89,7 @@
       <span>"24" Web Topics Found</span>
       <section class="topics"></section>
       <section class="topics"><article class="topic">
+        <a href="details.html" class="topic">
         <img src="../assets/html.png" alt="topic" srcset="">
         <section class="topic-info">
           <section class="topic-name">
@@ -102,7 +107,7 @@
             <section class="topic-author">Author: Sarah smith</section>
           </div>
         </section>
-       
+      </a>
       </article>
       <article class="topic">
         <img src="../assets/css.webp" alt="topic" srcset="">
