--- a/HTML/details.html
+++ b/HTML/details.html
@@ -3,6 +3,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Explore the web's wonders! Elevate your skills and build captivating online experiences. Visit us now!"
+    />
     <!-- CSS files -->
     <link rel="stylesheet" href="../CSS/all.css" />
     <link rel="stylesheet" href="../CSS/variables.css" />
