fixed an issue with button being a div element

--- a/HTML/details.html
+++ b/HTML/details.html
@@ -28,14 +28,14 @@
         <div class="nav-container1 main-padding">
           <h1>Web Topics</h1>
           <div class="nav-actions-container">
-            <div class="dark-mode-button button">
+            <button class="dark-mode-button button">
               <ion-icon name="moon-outline" id="moonIcon"></ion-icon>
               <span>Dark Mode</span>
-            </div>
-            <div class="favorites-button button">
+            </button>
+            <button class="favorites-button button">
               <ion-icon name="heart-outline" id="favoritesIcon"></ion-icon>
               <span>Favorites</span>
-            </div>
+            </button>
           </div>
         </div>
       </nav>
