fixed the background-color

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -24,21 +24,21 @@
   </head>
 <body>
   <header>
-    <nav>
-      <div class="nav-container1 main-padding">
-        <h1>Web Topics</h1>
-        <div class="nav-actions-container">
-          <div class="dark-mode-button button">
-            <ion-icon name="moon-outline" id="moonIcon"></ion-icon>
-            <span>Dark Mode</span>
-          </div>
-          <div class="favorites-button button">
-            <ion-icon name="heart-outline" id="favoritesIcon"></ion-icon>
-            <span>Favourites</span>
+   <nav>
+        <div class="nav-container1 main-padding">
+          <h1>Web Topics</h1>
+          <div class="nav-actions-container">
+            <button class="dark-mode-button button">
+              <ion-icon name="moon-outline" id="moonIcon"></ion-icon>
+              <span>Dark Mode</span>
+            </button>
+            <button class="favorites-button button">
+              <ion-icon name="heart-outline" id="favoritesIcon"></ion-icon>
+              <span>Favorites</span>
+            </button>
           </div>
         </div>
-      </div>
-    </nav>
+      </nav>
   </header>
    
 
