add some minor change for category

--- a/HTML/details.html
+++ b/HTML/details.html
@@ -131,7 +131,7 @@
         <section class="topic-favorites">
           <img src="../assets/react.webp" alt="topic" srcset="" />
           <section class="topic-info">
-            <p class="topic-title">HTML</p>
+            <p class="topic-title">REACT</p>
             <section class="topic-rate">
               <ion-icon name="star"></ion-icon>
               <ion-icon name="star"></ion-icon>
@@ -149,7 +149,9 @@
       <p>&copy; 2023</p>
     </footer>
     <script src="https://unpkg.com/ionicons@latest/dist/ionicons.js"></script>
-    <!-- <script src="../js/app.js"></script>
-    <script src="../js/add-favourites.js"></script> -->
+    <script src="../js/app.js"></script>
+    <script src="../js/index.js"></script>
+    <script src="../js/add-favourites.js"></script>
+      
   </body>
 </html>
