--- a/HTML/index.html
+++ b/HTML/index.html
@@ -803,9 +803,9 @@
 
       <section class="topics-favorites">
         <section class="topic-favorites">
-          <img src="../assets/html.png" alt="topic" srcset="" />
+          <img src="../assets/react.webp" alt="topic" srcset="" />
           <section class="topic-info">
-            <p class="topic-title">HTML</p>
+            <p class="topic-title">REACT</p>
             <section class="topic-rate">
               <ion-icon name="star"></ion-icon>
               <ion-icon name="star"></ion-icon>
@@ -824,8 +824,8 @@
     </footer>
     </footer>
     <script src="https://unpkg.com/ionicons@latest/dist/ionicons.js"></script>
-    <!-- <script src="../js/app.js"></script>
-    <script src="../js/home.js"></script> -->
-    
+    <script src="../js/app.js"></script>
+    <script src="../js/index.js"></script>
+    <script src="../js/add-favourites.js"></script>
 </body>
 </html>
