add few class  names

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -89,7 +89,7 @@
       <span>"24" Web Topics Found</span>
       <section class="topics"></section>
       <section class="topics"><article class="topic">
-        <a href="details.html" class="topic">
+        <a href="details.html" class="topic-link">
         <img src="../assets/html.png" alt="topic" srcset="">
         <section class="topic-info">
           <section class="topic-name">
