--- a/HTML/details.html
+++ b/HTML/details.html
@@ -150,7 +150,7 @@
     </footer>
     <script src="https://unpkg.com/ionicons@latest/dist/ionicons.js"></script>
     <script src="../js/app.js"></script>
-    <script src="../js/index.js"></script>
+    <!-- <script src="../js/index.js"></script> -->
       
   </body>
 </html>
