--- a/HTML/index.html
+++ b/HTML/index.html
@@ -825,6 +825,6 @@
     </footer>
     <script src="https://unpkg.com/ionicons@latest/dist/ionicons.js"></script>
     <script src="../js/app.js"></script>
-    <script src="../js/index.js"></script>
+    <!-- <script src="../js/index.js"></script> -->
 </body>
 </html>
