--- a/HTML/details.html
+++ b/HTML/details.html
@@ -149,7 +149,7 @@
       <p>&copy; 2023</p>
     </footer>
     <script src="https://unpkg.com/ionicons@latest/dist/ionicons.js"></script>
-    <script src="../js/app.js"></script>
+    <script src="/js/app.js"></script>
     <!-- <script src="../js/index.js"></script> -->
       
   </body>
