--- a/HTML/index.html
+++ b/HTML/index.html
@@ -824,7 +824,7 @@
     </footer>
     </footer>
     <script src="https://unpkg.com/ionicons@latest/dist/ionicons.js"></script>
-    <script src="../js/app.js"></script>
+    <script src="app.js"></script>
     <!-- <script src="../js/index.js"></script> -->
 </body>
 </html>
