--- a/HTML/index.html
+++ b/HTML/index.html
@@ -824,6 +824,6 @@
     </footer>
     </footer>
     <script src="https://unpkg.com/ionicons@latest/dist/ionicons.js"></script>
-    <script src="/app.js"></script>
+    <script src="../js/app.js"></script>
 </body>
 </html>
