--- a/details.html
+++ b/details.html
@@ -8,11 +8,11 @@
       content="Explore the web's wonders! Elevate your skills and build captivating online experiences. Visit us now!"
     />
     <!-- CSS files -->
-    <link rel="stylesheet" href="../CSS/all.css" />
-    <link rel="stylesheet" href="../CSS/variables.css" />
-    <link rel="stylesheet" href="../CSS/navigationBar.css" />
-    <link rel="stylesheet" href="../CSS/favourites.css" />
-    <link rel="stylesheet" href="../CSS/details.css" />
+    <link rel="stylesheet" href="CSS/all.css" />
+    <link rel="stylesheet" href="CSS/favourites.css" />
+    <link rel="stylesheet" href="CSS/variables.css" />
+    <link rel="stylesheet" href="CSS/navigationBar.css" />
+    <link rel="stylesheet" href="CSS/details.css" />
     <!-- google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -76,7 +76,7 @@
             foundational technology for the World Wide Web.
           </section>
           <div class="topic-img">
-            <img src="../assets/javascript.jpg" alt="" />
+            <img src="assets/javascript.jpg" alt="" />
             <div class="topic-details">
               <p><span>HTML</span> by <a href="#">Sarah Smith</a></p>
               <div class="add-favorites-container">
@@ -129,7 +129,7 @@
 
       <section class="topics-favorites">
         <section class="topic-favorites">
-          <img src="../assets/react.webp" alt="topic" srcset="" />
+          <img src="assets/react.webp" alt="topic" srcset="" />
           <section class="topic-info">
             <p class="topic-title">REACT</p>
             <section class="topic-rate">
@@ -149,7 +149,7 @@
       <p>&copy; 2023</p>
     </footer>
     <script src="https://unpkg.com/ionicons@latest/dist/ionicons.js"></script>
-    <script src="../js/app.js"></script>
+    <script src="app.js"></script>
       
   </body>
 </html>
