--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
       content="Explore the web's wonders! Elevate your skills and build captivating online experiences. Visit us now!"
     />
     <!-- CSS files -->
-    <link rel="stylesheet" href="CSS/all.css" />
-    <link rel="stylesheet" href="CSS/favourites.css" />
-    <link rel="stylesheet" href="CSS/variables.css" />
-    <link rel="stylesheet" href="CSS/navigationBar.css" />
-    <link rel="stylesheet" href="CSS/home.css" />
+    <link rel="stylesheet" href="css/all.css"/>
+    <link rel="stylesheet" href="css/details.css"/>
+    <link rel="stylesheet" href="css/navigationBar.css" />
+    <link rel="stylesheet" href="css/variables.css"/>
+    <link rel="stylesheet" href="css/home.css"/>
     <!-- google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
