--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     />
     <!-- CSS files -->
     <link rel="stylesheet" href="css/all.css"/>
-    <link rel="stylesheet" href="css/details.css"/>
+    <link rel="stylesheet" href="css/favourites.css"/>
     <link rel="stylesheet" href="css/navigationBar.css" />
     <link rel="stylesheet" href="css/variables.css"/>
     <link rel="stylesheet" href="css/home.css"/>
